# hipoclock

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
conf/: hipoclockd.conf
doc/: Hipoclock_HLD.odt  Hipoclock_HLD_old.odt  Hipoclock_LLD.odt  Hipoclock_RFC.odt
include/: Makefile  Makefile.am  Makefile.in  hipoclockd.h
src/server/: Makefile  Makefile.am  Makefile.in  config.c  hipoclockd.c
src/server/.deps/: hipoclockd-config.Po  hipoclockd-hipoclockd.Po
